Add test setup and tests for osi3trace
Signed-off-by: Pierre R. Mai <pmai@pmsf.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,16 @@ poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
 enable = true
 bump = true
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.2"
+black = "^24.4.2"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+testpaths = [
+    "tests",
+]
+
 [build-system]
 requires = [
     "poetry-core>=2.0.0,<3.0.0",
