--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,5 +43,5 @@ jobs:
       if: ${{ github.event_name == 'pull_request' || ( github.event_name == 'push' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v') ) ) }}
       uses: actions/upload-artifact@v4
       with:
-        name: python-dist
+        name: dist-python-${{ matrix.python-version }}-${{ matrix.os }}
         path: dist/
