--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dynamic = ["version"]
 requires-python = ">=3.10"
 dependencies = [
     "protobuf>=6.30.2",
+    "mcap>=1.2.2",
+    "mcap-protobuf-support>=0.5.3"
 ]
 
 [project.urls]
